service: load config from Yaml file