@@ -9,13 +9,10 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import javax.json.bind.Jsonb;
-import javax.json.bind.JsonbBuilder;
 import java.io.IOException;
 import java.util.UUID;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.AdditionalMatchers.eq;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
 
@@ -24,7 +21,6 @@ public class IssueConfigLoaderTest {
 
     private final CloverProperties cloverConfig;
     private final String issueNumber = UUID.randomUUID().toString();
-    private final Jsonb jsonb = JsonbBuilder.create();
     private final IssueConfigLoader issueLoader = new IssueConfigLoader();
     private final FileReader fileReader;
 
@@ -37,21 +33,22 @@ public class IssueConfigLoaderTest {
     }
 
     @Test
-    @DisplayName("Loads the clover.json file")
-    public void loadIssueJson() throws IOException {
+    @DisplayName("Loads the clover.yaml file")
+    public void loadIssueYaml() throws IOException {
         //given
         given(cloverConfig.getIssueDir()).willReturn("dir");
-        given(cloverConfig.getConfigFile()).willReturn("clover.json");
+        given(cloverConfig.getConfigFile()).willReturn("clover.yaml");
         final String content =
-                String.format("{" +
-                        "\"issue\":\"%s\"," +
-                        "\"title-colour\":\"red\"," +
-                        "\"sub-title-colour\":\"yellow\"" +
-                        "}", issueNumber);
+                """
+                        ---
+                        issue: %s
+                        titleColour: red
+                        subTitleColour: yellow
+                        """.formatted(issueNumber);
         given(fileReader.read(any())).willReturn(content);
         //when
         final IssueConfig issue =
-                issueLoader.loadIssueJson(cloverConfig, fileReader, jsonb);
+                issueLoader.loadIssue(cloverConfig, fileReader);
         //then
         assertThat(issue.getIssue()).isEqualTo(issueNumber);
         assertThat(issue.getTitleColour()).isEqualTo("red");
